Add PayPal configuration to .env.template

--- a/.env.template
+++ b/.env.template
@@ -7,3 +7,11 @@ DB_NAME=teslo-shop # This is the name of the database
 
 # DATABASE_URL="postgresql://usuario:contraseña@localhost:5432/name-db?schema=public"
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/teslo-shop?schema=public"
+
+# openssl rand -base64 32
+AUTH_SECRET="YYmOKH5BJzkAz0vmuUqMV41xIuedmDUdKIj/tosJg2A="
+
+# Paypal
+# https://developer.paypal.com/dashboard/
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+PAYPAL_SECRET=
