--- a/.env.template
+++ b/.env.template
@@ -15,3 +15,9 @@ AUTH_SECRET="YYmOKH5BJzkAz0vmuUqMV41xIuedmDUdKIj/tosJg2A="
 # https://developer.paypal.com/dashboard/
 NEXT_PUBLIC_PAYPAL_CLIENT_ID=
 PAYPAL_SECRET=
+
+# POST
+PAYPAL_OAUTH_URL=https://api-m.sandbox.paypal.com/v1/oauth2/token
+
+#GET
+PAYPAL_ORDERS_URL=https://api.sandbox.paypal.com/v2/checkout/orders
